--- a/wsgi/templates/index.html
+++ b/wsgi/templates/index.html
@@ -18,6 +18,7 @@
     </table>
     <p>
       <a href="{{ url_for('new') }}" class="btn btn-large btn-primary">New Todo</a>
+      <a href="{{ url_for('register') }}" class="btn btn-large">Register</a>
 
   
 </div>
