--- a/wsgi/templates/layout.html
+++ b/wsgi/templates/layout.html
@@ -10,6 +10,8 @@ body {
 </style>
 <link href="/static/css/bootstrap.css" rel="stylesheet">
 <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+
 <script src="/static/js/jquery.js"></script>
 <script src="/static/js/bootstrap.js"></script>
 
@@ -21,7 +23,10 @@ body {
 					<span class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a class="brand" href="/">TodoApp</a>
+        <a class="brand" href="/">
+          <i class="fa fa-fire-extinguisher"></i>
+          TodoApp
+        </a>
 				<div class="nav-collapse collapse">
 		            <ul class="nav">
 		                <li class="active"><a href="/">Home</a></li>
